--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "thpace": "^2.0.2"
   },
   "devDependencies": {
     "eslint": "^8",
