--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-portfolio-website",
+  "name": "nextjs-portfolio-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
